@@ -1,2 +1,2 @@
 #include "Common.hh"
-#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 5787", "2014-03-08 15:34:05 UTC", "Linux 2.6.32-54-generic i686", "'VALUE_CHECK_WANTED=yes' 'VALUE_HISTORY_WANTED=yes' 'DYNAMIC_LOG_WANTED=yes' 'ASSERT_LEVEL_WANTED=2' 'PRINT_SEMA_WANTED=yes' 'VISIBLE_MARKERS_WANTED=yes'"
+#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 5799", "2014-03-09 14:15:28 UTC", "Linux 2.6.32-54-generic i686", "'--host=i486-pc-linux-gnu' '--build=i486-pc-linux-gnu' '--target=i486-rpm-linux' '--program-prefix=' '--prefix=/usr' '--exec-prefix=/usr' '--bindir=/usr/bin' '--sbindir=/usr/sbin' '--sysconfdir=/etc' '--datadir=/usr/share' '--includedir=/usr/include' '--libdir=/usr/lib' '--libexecdir=/usr/libexec' '--localstatedir=/var' '--sharedstatedir=/usr/com' '--mandir=/usr/share/man' '--infodir=/usr/share/info' 'build_alias=i486-pc-linux-gnu' 'host_alias=i486-pc-linux-gnu' 'target_alias=i486-rpm-linux' 'CFLAGS=-O2 -g -march=i486' 'CXXFLAGS=-O2 -g -march=i486'"
